--- a/roles/carbonapi/tasks/main.yml
+++ b/roles/carbonapi/tasks/main.yml
@@ -5,10 +5,20 @@
     dest: /tmp/carbonapi.deb
   become: true
 
-- name: install debfile
-  apt:
-    deb: /tmp/carbonapi.deb
+- name: copy carbonzipper
+  copy:
+    src: "{{ carbonzipper_deb }}"
+    dest: /tmp/carbonzipper.deb
   become: true
+
+- name: install debfiles
+  apt:
+    deb: "{{ item }}"
+  with_items: 
+    - /tmp/carbonapi.deb
+    - /tmp/carbonzipper.deb
+  become: true
+  notify: restart carbonzipper
   when: (ansible_distribution == "Debian" or ansible_distribution == "Ubuntu")
 
 - name: install memcached
@@ -44,6 +54,9 @@
 
 - name: cleanup
   file:
-    path: /tmp/carbonapi.deb
+    path: {{ item }}
     state: absent
   become: true
+  with_items:
+    - /tmp/carbonapi.deb
+    - /tmp/carbonzipper.deb
