--- a/roles/carbonapi/handlers/main.yaml
+++ b/roles/carbonapi/handlers/main.yaml
@@ -5,4 +5,9 @@
     state: started
     enabled: true
   become: true
-
+- name: restart carbonzipper 
+  service: 
+    name: carbonzipper
+    state: restarted
+    enabled: true
+  become: true
