--- a/metrics_server.yml
+++ b/metrics_server.yml
@@ -1,6 +1,7 @@
 ---
-- name: install carbonapi
+- name: install metrics server
   hosts: all
   roles: 
     - carbonapi
     - go-carbon
+    - grafana
