--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -11,7 +11,7 @@
   become: true
   when: (ansible_distribution == "Debian" or ansible_distribution == "Ubuntu") 
 - name: grafana config 
-  template:
+  temp2late:
     src: grafana.ini.j2
     dest: /etc/grafana/grafana.ini
   notify: restart grafana
